# scriptyscript

./: Cargo.toml  README.md
examples/: branch.ss  fib.ss  fizzbuzz.ss  functions.ss  loop.ss  math.ss  nim.ss  stdlib.ss
src/: ast.rs  builtin.rs  compiler.rs  grammar.pest  lib.rs  main.rs  object.rs  opcode.rs  state.rs
src/compiler/: ast.rs  grammar.pest  mod.rs  parser.rs  translator.rs
src/runtime/: bytecode.rs  executor.rs  mod.rs  opcode.rs  state.rs
src/runtime/types/: function.rs  mod.rs  object.rs  operations.rs  primitive.rs  table.rs  utilities.rs
src/stdlib/: mod.rs
