[package]
name = "scriptyscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
num-traits = "0.2.15"
once_cell = "1.17.1"
pest = "2.5.7"
pest_derive = "2.5.7"
serde = { version = "1.0.159", features = ["derive"] }
